#21 added parameters to pagination mixin

--- a/src/blocks/pagination/pagination.pug
+++ b/src/blocks/pagination/pagination.pug
@@ -1,9 +1,12 @@
-mixin pagination()
+mixin pagination({ text, items = [] })
   .pagination
-    a.pagination__item.pagination__item--active(href="/mock-address") 1
-    a.pagination__item(href="/mock-address") 2
-    a.pagination__item(href="/mock-address") 3
-    .pagination__item ...
-    a.pagination__item(href="/mock-address") 15
+    each item in items
+      - let classes = ["pagination__item"]
+      if item.active
+        - classes.push("pagination__item--active")
+      if item.link
+        a(class=classes href=item.link)= item.text
+      else
+        .pagination__item ...
     button.pagination__next
-    .pagination__info 1 &ndash; 12 из 100+ вариантов аренды
+    .pagination__info!= text
