#21 added parameter to subscription mixin

--- a/src/blocks/subscription/subscription.pug
+++ b/src/blocks/subscription/subscription.pug
@@ -1,7 +1,7 @@
 include ../text-field/text-field
 
-mixin subscription({placeholder})
+mixin subscription({placeholder, link="/mock-address"})
   .subscription
-    form.subscription-form(action="/mock-address", method="get")
+    form.subscription-form(action=link, method="get")
       +text-field({type: "text", placeholder: placeholder})
       button.subscription__button arrow_forward
