fix mixin calls

--- a/src/blocks/slider/slider.pug
+++ b/src/blocks/slider/slider.pug
@@ -2,7 +2,7 @@ mixin slider({title="Range", footerText})
   .slider
     .slider__header
       .slider__title= title
-      .slider__min-max Some text
+      .slider__min-max
     input.js-slider
     if footerText
       .slider__footer= footerText
