#19 added calendar styles and change it on js file

--- a/src/scss/plugins/datepicker.scss
+++ b/src/scss/plugins/datepicker.scss
@@ -13,11 +13,11 @@
     padding: 0;
   }
 
-  &--btn-container {
-    padding-top: 18px;
-    display: flex;
-    justify-content: space-between;
-  }
+  // &--btn-container {
+  //   padding-top: 18px;
+  //   display: flex;
+  //   justify-content: space-between;
+  // }
 
   &--cell {
     width: 40px;
