--- a/src/blocks/booking-card/booking-card.scss
+++ b/src/blocks/booking-card/booking-card.scss
@@ -29,11 +29,11 @@
     margin: 4px 0;
     position: relative;
 
-    &--index-hight {
+    &--high {
       z-index: 10;
     }
 
-    &--index-low {
+    &--low {
       z-index: 5;
     }
   }
