--- a/src/blocks/button/button.pug
+++ b/src/blocks/button/button.pug
@@ -1,5 +1,5 @@
 mixin button({text, disabled = false})
   - let classes = ['button']
   if disabled
-    - classes.push('button--disabled')
+    - classes.push('button_disabled')
   button(class=classes)= text
