--- a/src/blocks/checkbox/checkbox.scss
+++ b/src/blocks/checkbox/checkbox.scss
@@ -9,7 +9,7 @@
   line-height: 1.125rem;
   color: $dark-shade-50;
 
-  &--text-bold {
+  &_text-bold {
     font-family: Montserrat, OpenSans, sans-serif;
     font-weight: bold;
     color: $dark-shade-75;
