--- a/src/blocks/expander/expander.pug
+++ b/src/blocks/expander/expander.pug
@@ -3,7 +3,7 @@ include ../checkbox/checkbox
 mixin expander({title, hide, list})
   .expander
     .expander__header.js-expander= title
-    .expander__list(class=hide ? "expander__list--hided": "")
+    .expander__list(class=hide ? "expander__list_hided": "")
       each item in list
         .expander__checkbox
           +checkbox({ label: item.text, checked: item.checked} )
