--- a/src/blocks/gallery/gallery.pug
+++ b/src/blocks/gallery/gallery.pug
@@ -8,7 +8,7 @@ mixin gallery(image, arrows = true)
         .gallery__right-arrow.gallery__arrow
           i.material-icons keyboard_arrow_left
       .gallery__point-container
-        .gallery__point.gallery__point--filled
+        .gallery__point.gallery__point_filled
         .gallery__point
         .gallery__point
         .gallery__point
