--- a/src/blocks/like/like.pug
+++ b/src/blocks/like/like.pug
@@ -1,7 +1,7 @@
 mixin like({liked, likes})
   if liked
-    .like.like--liked= likes
-      i.like__icon.like__icon--liked favorite
+    .like.like_liked= likes
+      i.like__icon.like__icon_liked favorite
   else
     .like= likes
       i.like__icon favorite_border
