--- a/src/blocks/pagination/pagination.scss
+++ b/src/blocks/pagination/pagination.scss
@@ -13,7 +13,7 @@
     text-decoration: none;
     color: $dark-shade-50;
 
-    &--active {
+    &_active {
       border-radius: 50%;
       background-image: $gradient;
       color: $white;
