--- a/src/blocks/price/price.pug
+++ b/src/blocks/price/price.pug
@@ -1,4 +1,4 @@
 mixin price(price)
   .price
-    span.price--font-bold #{price}&#8381; 
-    span.price--font-small в сутки
+    span.price_font-bold #{price}&#8381; 
+    span.price_font-small в сутки
