--- a/src/blocks/register-card/register-card.scss
+++ b/src/blocks/register-card/register-card.scss
@@ -27,7 +27,7 @@
   &__block {
     margin-top: 20px;
 
-    &--margin-large {
+    &_margin-large {
       margin: 28px 0 0;
     }
   }
@@ -43,7 +43,7 @@
   &__item {
     margin-bottom: 10px;
 
-    &--without-margin {
+    &_without-margin {
       margin-bottom: 0;
     }
   }
