--- a/src/blocks/socials/socials.pug
+++ b/src/blocks/socials/socials.pug
@@ -1,5 +1,5 @@
 mixin socials()
   .socials
-    a.socials__link.socials__link--with-twitter(href="http://twitter.com" target="_blank" rel="noopener noreferrer")
-    a.socials__link.socials__link--with-fb(href="http://facebook.com" target="_blank" rel="noopener noreferrer")
-    a.socials__link.socials__link--with-instagram(href="http://instagram.com" target="_blank" rel="noopener noreferrer")
+    a.socials__link.socials__link_with-twitter(href="http://twitter.com" target="_blank" rel="noopener noreferrer")
+    a.socials__link.socials__link_with-fb(href="http://facebook.com" target="_blank" rel="noopener noreferrer")
+    a.socials__link.socials__link_with-instagram(href="http://instagram.com" target="_blank" rel="noopener noreferrer")
