--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -48,7 +48,7 @@
   &__room-item {
     max-width: 280px;
 
-    &--bottom {
+    &_bottom {
       margin-top: 24px;
       max-width: 320px;
     }
