--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -21,7 +21,7 @@ block content
           .search-room__sidebar-item
             +dropdown-field({ title: "Даты пребывания в отеле", value: "19 авг - 23 авг" })
 
-          .search-room--index-100
+          .search-room_index-100
             .search-room__sidebar-item
               .search-room__subtitle Гости
               +configuration-dropdown({ name: "guests" })
@@ -49,7 +49,7 @@ block content
                 description: "На 1 этаже вас встретит специалист и проводит до номера.",
               })
            
-          .search-room--index-100
+          .search-room_index-100
             .search-room__dropdown
               .search-room__subtitle Удобства номера
               +configuration-dropdown({ name: "search-room" })
