--- a/src/blocks/additions/additions.scss
+++ b/src/blocks/additions/additions.scss
@@ -8,7 +8,7 @@
   border-color: $dark-shade-10;
   padding: 0 0 1.43em 4.14em;
 
-  &--without-border {
+  &_without-border {
     border: none;
   }
 
