--- a/src/blocks/checkbox/checkbox.pug
+++ b/src/blocks/checkbox/checkbox.pug
@@ -1,7 +1,7 @@
 mixin checkbox({ label, checked=false, bold=false })
   - let classes = ["checkbox"]
   if bold
-    - classes.push("checkbox--text-bold")
+    - classes.push("checkbox_text-bold")
   label(class=classes)= label
     input.checkbox__input(type="checkbox" checked=checked)
     .checkbox__mark
