--- a/src/blocks/expander/expander.scss
+++ b/src/blocks/expander/expander.scss
@@ -25,7 +25,7 @@
       transform: rotate(-45deg);
     }
 
-    &--open::after {
+    &_open::after {
       transform: rotate(135deg);
       top: 3px;
     }
@@ -38,7 +38,7 @@
   &__list {
     display: block;
 
-    &--hided {
+    &_hided {
       display: none;
     }
   }
