--- a/src/blocks/image-card/image-card.scss
+++ b/src/blocks/image-card/image-card.scss
@@ -17,7 +17,7 @@
     justify-content: space-between;
     height: 40px;
 
-    &--underlined {
+    &_underlined {
       border-bottom: 1px solid $dark-shade-10;
     }
   }
@@ -25,7 +25,7 @@
   &__text {
     display: inline-block;
 
-    &--accented {
+    &_accented {
       font-weight: bold;
     }
   }
