--- a/src/blocks/invoice/invoice.scss
+++ b/src/blocks/invoice/invoice.scss
@@ -8,7 +8,7 @@
     justify-content: space-between;
     margin-bottom: 10px;
 
-    &--font-large {
+    &_font-large {
       font-family: Quicksand, OpenSans, sans-serif;
       font-weight: bold;
       color: $dark-shade-100;
@@ -35,7 +35,7 @@
     width: 80%;
     line-height: 1.125rem;
 
-    &--with-icon::after {
+    &_with-icon::after {
       position: absolute;
       content: 'i';
       top: 0;
