--- a/src/blocks/pagination/pagination.pug
+++ b/src/blocks/pagination/pagination.pug
@@ -3,7 +3,7 @@ mixin pagination({ text, items = [] })
     each item in items
       - let classes = ["pagination__item"]
       if item.active
-        - classes.push("pagination__item--active")
+        - classes.push("pagination__item_active")
       if item.link
         a(class=classes href=item.link)= item.text
       else
