--- a/src/blocks/simple-button/simple-button.pug
+++ b/src/blocks/simple-button/simple-button.pug
@@ -1,5 +1,5 @@
 mixin simple-button({text, isDisabled = false})
   - const classes = ["simple-button"]
   if isDisabled
-    - classes.push("simple-button--disabled")
+    - classes.push("simple-button_disabled")
   div(class=classes)= text
