--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -47,10 +47,10 @@ block content
 
             .room-details__list
               ul.bullet
-                li.bullet__element.bullet__element--yellow.bullet__element--compacted Великолепно
-                li.bullet__element.bullet__element--blue.bullet__element--compacted Хорошо
-                li.bullet__element.bullet__element--pink.bullet__element--compacted Удовлетворительно
-                li.bullet__element.bullet__element--black.bullet__element--compacted Разачарован
+                li.bullet__element.bullet__element_yellow.bullet__element_compacted Великолепно
+                li.bullet__element.bullet__element_blue.bullet__element_compacted Хорошо
+                li.bullet__element.bullet__element_pink.bullet__element_compacted Удовлетворительно
+                li.bullet__element.bullet__element_black.bullet__element_compacted Разачарован
         .room-details__room-comments
           h2.room-details__title Отзывы посетителей номера
           .room-details__inner
@@ -68,14 +68,14 @@ block content
             like: { likes: 2, liked: false },
             text: "Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент"
           })
-        .room-details__room-item.room-details__room-item--bottom
+        .room-details__room-item.room-details__room-item_bottom
           h2.room-details__title Правила
           +bullet([
             "Нельзя с питомцами",
             "Без вечеринок и мероприятий",
             "Время прибытия — после 13:00, а выезд до 12:00"
           ])
-        .room-details__room-item.room-details__room-item--bottom
+        .room-details__room-item.room-details__room-item_bottom
           h2.room-details__title Отмена
           p.room-details__text Бесплатная отмена в течение 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
       .room-details__booking
