--- a/src/blocks/comment/comment.scss
+++ b/src/blocks/comment/comment.scss
@@ -16,11 +16,19 @@
     line-height: 1.72em;
   }
 
+  &__avatar-container {
+    margin: 0 auto;
+  }
+
   &__avatar {
     width: 48px;
     height: 48px;
     border: 2px solid $white;
     border-radius: 50%;
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.1);
+  }
+
+  &__like {
+    margin: 0 auto;
   }
 }
