--- a/src/blocks/hero-galery/hero-galery.scss
+++ b/src/blocks/hero-galery/hero-galery.scss
@@ -1,15 +1,19 @@
 .hero-galery {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  display: flex;
+  width: 100%;
 
-  &__main-image {
-    grid-row: 1/3;
-    width: 100%;
-    height: 100%;
+  &__main-container {
+    width: 68.125%;
   }
 
-  &__other-image {
+  &__right-container {
+    display: flex;
+    flex-flow: column wrap;
+    width: 31.875%;
+  }
+
+  &__image {
     width: 100%;
   }
+
 }
