--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -9,20 +9,22 @@
   &__grid {
     display: grid;
     grid-template-columns: 2fr 1fr;
-    column-gap: 70px;
+    column-gap: 56px;
     row-gap: 30px;
-    padding-top: 78px;
+    padding-top: 64px;
 
     @media screen and (max-width: 1248px) {
       grid-template-columns: 1fr;
     }
   }
-  
 
+  &__additions {
+    margin-top: 20px;
+  }
+  
   &__info {
     display: grid;
     column-gap: 70px;
-    row-gap: 12px;
 
     @media (max-width: 767px) {
       display: flex;
@@ -55,8 +57,13 @@
   }
 
   &__room-comments {
-    margin-top: 0px;
+    margin-top: 12px;
     grid-column: 1/3;
+    margin-right: 14px;
+  }
+
+  &__comment {
+    margin: 18px 0 22px;
   }
 
   &__inner {
@@ -71,7 +78,7 @@
   &__booking {
     min-width: 380px;
     justify-self: center;
-    padding-bottom: 20px;
+    padding-top: 16px;
   }
 
   &__title {
@@ -79,7 +86,7 @@
     color: $dark-shade-100;
     font-size: 1.1875rem;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin: 0;
   }
 
   &__statistic {
