--- a/src/blocks/comment/comment.scss
+++ b/src/blocks/comment/comment.scss
@@ -14,10 +14,11 @@
 
   &__text {
     line-height: 1.72em;
+    margin-top: 2px;
   }
 
   &__avatar-container {
-    margin: 0 auto;
+    margin: 2px auto;
   }
 
   &__avatar {
