#24 fix click on icon inside inputs

--- a/src/blocks/dropdown-field/dropdown-field.pug
+++ b/src/blocks/dropdown-field/dropdown-field.pug
@@ -2,5 +2,5 @@ mixin dropdown-field({ title, placeholder, value })
   .dropdown-field
     if title
       .dropdown-field__title= title
-    .dropdown-field__icon-wrapper
+    label.dropdown-field__icon-wrapper
       input.dropdown-field__input(placeholder=placeholder value=value)
