#24 fix bug with slider's filename

--- a/src/scss/plugins/irs.scss
+++ b/src/scss/plugins/irs.scss
@@ -1,4 +1,4 @@
-@import '~ion-rangeslider/css/ion.rangeslider.css';
+@import '~ion-rangeslider/css/ion.rangeSlider.css';
 @import '../colors.scss';
 
 .irs {
