added cover size to hero images

--- a/src/pages/sign-in/sign-in.scss
+++ b/src/pages/sign-in/sign-in.scss
@@ -1,8 +1,8 @@
 .sign-in {
   background-image: url(./images/registration-background.png);
   background-position-x: center;
-  background-position-y: -70px;
   background-repeat: no-repeat;
+  background-size: cover;
 
   &__content {
     display: flex;
