--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -4,8 +4,8 @@
 .landing {
   background-image: url(./images/landing-background.png);
   background-position-x: center;
-  background-position-y: -70px;
   background-repeat: no-repeat;
+  background-size: cover;
 
   &__content {
     display: flex;
