--- a/src/pages/registration/registration.scss
+++ b/src/pages/registration/registration.scss
@@ -4,8 +4,8 @@
 .registration {
   background-image: url(./images/registration-background.png);
   background-position-x: center;
-  background-position-y: -50px;
   background-repeat: no-repeat;
+  background-size: cover;
 
   &__content {
     display: flex;
